[metadata]
name = twissed
version = attr: twissed.__version__
author = Damien Minenna
author_email = damien.minenna@cea.fr
url = https://github.com/Twissed/Twissed
description = Python toolbox for LWFA simulations
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = 
    Twiss parameters
    Beam dynamics
    LWFA
    PIC
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options]
packages = find:
include_package_data = True
zip_safe = True
install_requires =
    numpy
    pandas
    scipy
    h5py
python_requires = >=3.7
